--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="navbar">
-      <img src="imges/logo.png" class="brand-logo" alt="" />
+      <img src="images/logo.png" class="brand-logo" alt="" />
       <ul class="nav-links">
         <li class="nav-items"><a href="#">TV</a></li>
         <li class="nav-items"><a href="#">Movies</a></li>
