--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         <li class="nav-items"><a href="#">Sports</a></li>
         <li class="nav-items"><a href="#">Premium</a></li>
       </ul>
+      <div class="right-container">
+        <input type="text" class="search-box" placeholder="search" />
+        <button class="sub-btn">subscribe</button>
+        <a href="#" class="login-link">Login</a>
+      </div>
     </div>
   </body>
 </html>
