--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
-    <div class="navbar">
+    <nav class="navbar">
       <img src="images/logo.png" class="brand-logo" alt="" />
       <ul class="nav-links">
         <li class="nav-items"><a href="#">TV</a></li>
@@ -22,6 +22,6 @@
         <button class="sub-btn">subscribe</button>
         <a href="#" class="login-link">Login</a>
       </div>
-    </div>
+    </nav>
   </body>
 </html>
