--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
         <a href="#" class="login-link">Login</a>
       </div>
     </nav>
+
+    <div class="caraousel-container">
+      <div class="caraousel"></div>
+    </div>
   </body>
 </html>
