add slider content

--- a/index.html
+++ b/index.html
@@ -25,7 +25,18 @@
     </nav>
 
     <div class="caraousel-container">
-      <div class="caraousel"></div>
+      <div class="caraousel">
+        <div class="slider">
+          <div class="slider-content">
+            <h1 class="movie-title">Loki</h1>
+            <p class="movie-des">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta
+              animi commodi illum, voluptates totam corporis?
+            </p>
+          </div>
+          <img src="images/slider 1.PNG" alt="" />
+        </div>
+      </div>
     </div>
   </body>
 </html>
