--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="caraousel-container">
       <div class="caraousel">
-        <div class="slider">
+        <!--<div class="slider">
           <div class="slider-content">
             <h1 class="movie-title">Loki</h1>
             <p class="movie-des">
@@ -35,7 +35,7 @@
             </p>
           </div>
           <img src="images/slider 1.PNG" alt="" />
-        </div>
+        </div>-->
       </div>
     </div>
   </body>
