--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
 
     <div class="caraousel-container">
-      <div class="caraousel">
+      <div class="carousel">
         <!--<div class="slider">
           <div class="slider-content">
             <h1 class="movie-title">Loki</h1>
@@ -38,6 +38,6 @@
         </div>-->
       </div>
     </div>
-    <script src="index.js"></script>
+    <script src="index.js" async></script>
   </body>
 </html>
