--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, intial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Disney+ Clone</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -27,7 +27,7 @@
     <div class="caraousel-container">
       <div class="carousel">
         <!--<div class="slider">
-          <div class="slider-content">
+          <div class="slide-content">
             <h1 class="movie-title">Loki</h1>
             <p class="movie-des">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta
