--- a/index.html
+++ b/index.html
@@ -65,6 +65,28 @@
         ></video>
       </div>
     </div>
+    <h1 class="title">Recommended For You</h1>
+    <div class="movies-list">
+      <button class="pre-btn" title="btn">
+        <img src="images/pre.png" alt="" />
+      </button>
+      <button class="nxt-btn" title="btn">
+        <img src="images/nxt.png" alt="" />
+      </button>
+      <div class="card-container">
+        <img src="images/poster 1.png" class="card-img" alt="" />
+        <div class="card-body">
+          <h2 class="name">Movie Name</h2>
+          <h6 class="des">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Necessitatibus eveniet, sunt dolorum libero at non, quo odio ad
+            similique omnis mollitia quia blanditiis. Blanditiis illum nam optio
+            cum eius recusandae.
+          </h6>
+          <button class="watchlist-btn">add to watchlist</button>
+        </div>
+      </div>
+    </div>
     <script src="index.js" async></script>
   </body>
 </html>
