--- a/index.html
+++ b/index.html
@@ -74,16 +74,135 @@
         <img src="images/nxt.png" alt="" />
       </button>
       <div class="card-container">
-        <img src="images/poster 1.png" class="card-img" alt="" />
-        <div class="card-body">
-          <h2 class="name">Movie Name</h2>
-          <h6 class="des">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            Necessitatibus eveniet, sunt dolorum libero at non, quo odio ad
-            similique omnis mollitia quia blanditiis. Blanditiis illum nam optio
-            cum eius recusandae.
-          </h6>
-          <button class="watchlist-btn">add to watchlist</button>
+        <div class="card">
+          <img src="images/poster 1.png" class="card-img" alt="" />
+          <div class="card-body">
+            <h2 class="name">Movie Name</h2>
+            <h6 class="des">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            </h6>
+            <button class="watchlist-btn">add to watchlist</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/poster 12.png" class="card-img" alt="" />
+          <div class="card-body">
+            <h2 class="name">Movie Name</h2>
+            <h6 class="des">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            </h6>
+            <button class="watchlist-btn">add to watchlist</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/poster 11.png" class="card-img" alt="" />
+          <div class="card-body">
+            <h2 class="name">Movie Name</h2>
+            <h6 class="des">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            </h6>
+            <button class="watchlist-btn">add to watchlist</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/poster 10.png" class="card-img" alt="" />
+          <div class="card-body">
+            <h2 class="name">Movie Name</h2>
+            <h6 class="des">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            </h6>
+            <button class="watchlist-btn">add to watchlist</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/poster 9.png" class="card-img" alt="" />
+          <div class="card-body">
+            <h2 class="name">Movie Name</h2>
+            <h6 class="des">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            </h6>
+            <button class="watchlist-btn">add to watchlist</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/poster 8.png" class="card-img" alt="" />
+          <div class="card-body">
+            <h2 class="name">Movie Name</h2>
+            <h6 class="des">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            </h6>
+            <button class="watchlist-btn">add to watchlist</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/poster 7.png" class="card-img" alt="" />
+          <div class="card-body">
+            <h2 class="name">Movie Name</h2>
+            <h6 class="des">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            </h6>
+            <button class="watchlist-btn">add to watchlist</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/poster 6.png" class="card-img" alt="" />
+          <div class="card-body">
+            <h2 class="name">Movie Name</h2>
+            <h6 class="des">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            </h6>
+            <button class="watchlist-btn">add to watchlist</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/poster 5.png" class="card-img" alt="" />
+          <div class="card-body">
+            <h2 class="name">Movie Name</h2>
+            <h6 class="des">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            </h6>
+            <button class="watchlist-btn">add to watchlist</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/poster 4.png" class="card-img" alt="" />
+          <div class="card-body">
+            <h2 class="name">Movie Name</h2>
+            <h6 class="des">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            </h6>
+            <button class="watchlist-btn">add to watchlist</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/poster 3.png" class="card-img" alt="" />
+          <div class="card-body">
+            <h2 class="name">Movie Name</h2>
+            <h6 class="des">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            </h6>
+            <button class="watchlist-btn">add to watchlist</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/poster 2.png" class="card-img" alt="" />
+          <div class="card-body">
+            <h2 class="name">Movie Name</h2>
+            <h6 class="des">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            </h6>
+            <button class="watchlist-btn">add to watchlist</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/poster 1.png" class="card-img" alt="" />
+          <div class="card-body">
+            <h2 class="name">Movie Name</h2>
+            <h6 class="des">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            </h6>
+            <button class="watchlist-btn">add to watchlist</button>
+          </div>
         </div>
       </div>
     </div>
