--- a/index.html
+++ b/index.html
@@ -194,6 +194,135 @@
             <button class="watchlist-btn">add to watchlist</button>
           </div>
         </div>
+        <h1 class="title">Popular Shows</h1>
+        <div class="movies-list">
+            <button class="pre-btn" title="btn">
+              <img src="images/pre.png" alt="" />
+            </button>
+            <button class="nxt-btn" title="btn">
+              <img src="images/nxt.png" alt="" />
+            </button>
+            <div class="card-container">
+              <div class="card">
+                <img src="images/poster 12.png" class="card-img" alt="" />
+                <div class="card-body">
+                  <h2 class="name">Movie Name</h2>
+                  <h6 class="des">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  </h6>
+                  <button class="watchlist-btn">add to watchlist</button>
+                </div>
+              </div>
+              <div class="card">
+                <img src="images/poster 11.png" class="card-img" alt="" />
+                <div class="card-body">
+                  <h2 class="name">Movie Name</h2>
+                  <h6 class="des">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  </h6>
+                  <button class="watchlist-btn">add to watchlist</button>
+                </div>
+              </div>
+              <div class="card">
+                <img src="images/poster 10.png" class="card-img" alt="" />
+                <div class="card-body">
+                  <h2 class="name">Movie Name</h2>
+                  <h6 class="des">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  </h6>
+                  <button class="watchlist-btn">add to watchlist</button>
+                </div>
+              </div>
+              <div class="card">
+                <img src="images/poster 9.png" class="card-img" alt="" />
+                <div class="card-body">
+                  <h2 class="name">Movie Name</h2>
+                  <h6 class="des">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  </h6>
+                  <button class="watchlist-btn">add to watchlist</button>
+                </div>
+              </div>
+              <div class="card">
+                <img src="images/poster 8.png" class="card-img" alt="" />
+                <div class="card-body">
+                  <h2 class="name">Movie Name</h2>
+                  <h6 class="des">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  </h6>
+                  <button class="watchlist-btn">add to watchlist</button>
+                </div>
+              </div>
+              <div class="card">
+                <img src="images/poster 7.png" class="card-img" alt="" />
+                <div class="card-body">
+                  <h2 class="name">Movie Name</h2>
+                  <h6 class="des">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  </h6>
+                  <button class="watchlist-btn">add to watchlist</button>
+                </div>
+              </div>
+              <div class="card">
+                <img src="images/poster 6.png" class="card-img" alt="" />
+                <div class="card-body">
+                  <h2 class="name">Movie Name</h2>
+                  <h6 class="des">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  </h6>
+                  <button class="watchlist-btn">add to watchlist</button>
+                </div>
+              </div>
+              <div class="card">
+                <img src="images/poster 5.png" class="card-img" alt="" />
+                <div class="card-body">
+                  <h2 class="name">Movie Name</h2>
+                  <h6 class="des">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  </h6>
+                  <button class="watchlist-btn">add to watchlist</button>
+                </div>
+              </div>
+              <div class="card">
+                <img src="images/poster 4.png" class="card-img" alt="" />
+                <div class="card-body">
+                  <h2 class="name">Movie Name</h2>
+                  <h6 class="des">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  </h6>
+                  <button class="watchlist-btn">add to watchlist</button>
+                </div>
+              </div>
+              <div class="card">
+                <img src="images/poster 3.png" class="card-img" alt="" />
+                <div class="card-body">
+                  <h2 class="name">Movie Name</h2>
+                  <h6 class="des">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  </h6>
+                  <button class="watchlist-btn">add to watchlist</button>
+                </div>
+              </div>
+              <div class="card">
+                <img src="images/poster 2.png" class="card-img" alt="" />
+                <div class="card-body">
+                  <h2 class="name">Movie Name</h2>
+                  <h6 class="des">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  </h6>
+                  <button class="watchlist-btn">add to watchlist</button>
+                </div>
+              </div>
+              <div class="card">
+                <img src="images/poster 1.png" class="card-img" alt="" />
+                <div class="card-body">
+                  <h2 class="name">Movie Name</h2>
+                  <h6 class="des">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  </h6>
+                  <button class="watchlist-btn">add to watchlist</button>
+                </div>
+              </div>
       </div>
     </div>
     <script src="index.js" async></script>
