--- a/index.html
+++ b/index.html
@@ -25,18 +25,7 @@
     </nav>
 
     <div class="caraousel-container">
-      <div class="carousel">
-        <!--<div class="slider">
-          <div class="slide-content">
-            <h1 class="movie-title">Loki</h1>
-            <p class="movie-des">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta
-              animi commodi illum, voluptates totam corporis?
-            </p>
-          </div>
-          <img src="images/slider 1.PNG" alt="" />
-        </div>-->
-      </div>
+      <div class="carousel"></div>
     </div>
     <div class="video-card-container">
       <div class="video-card">
