--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Disney+ Clone</title>
+    <!--css file-->
     <link rel="stylesheet" href="styles.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
+    <!--Navbar-->
     <nav class="navbar">
       <img src="images/logo.png" class="brand-logo" alt="" />
       <ul class="nav-links">
@@ -23,10 +25,11 @@
         <a href="#" class="login-link">Login</a>
       </div>
     </nav>
-
+    <!--Automated Slider-->
     <div class="caraousel-container">
       <div class="carousel"></div>
     </div>
+    <!--Video cards-->
     <div class="video-card-container">
       <div class="video-card">
         <img src="images/disney.PNG" class="video-card-image" alt="" />
@@ -54,6 +57,7 @@
         ></video>
       </div>
     </div>
+    <!--Recommended List Slider-->
     <h1 class="title">Recommended For You</h1>
     <div class="movies-list">
       <button class="pre-btn" title="btn">
@@ -185,6 +189,7 @@
         </div>
       </div>
     </div>
+    <!--Popular List Slider-->
     <h1 class="title">Popular Shows</h1>
     <div class="movies-list">
       <button class="pre-btn" title="btn">
@@ -316,6 +321,7 @@
         </div>
       </div>
     </div>
+    <!--js file-->
     <script src="index.js" async></script>
   </body>
 </html>
