--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         <div class="card">
           <img src="images/poster 1.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
+            <h2 class="name">Loki</h2>
             <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              TV Series (2021– ) <br />Action/Adventure/Fantasy
             </h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
@@ -80,19 +80,17 @@
         <div class="card">
           <img src="images/poster 2.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            </h6>
+            <h2 class="name">Mulan</h2>
+            <h6 class="des">Movie (2020) <br />Action/Adventure/Drama</h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
         </div>
         <div class="card">
           <img src="images/poster 3.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
+            <h2 class="name">The Falcon and the Winter Soldier</h2>
             <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              TV Mini Series (2021) <br />Action/Adventure/Drama
             </h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
@@ -100,90 +98,76 @@
         <div class="card">
           <img src="images/poster 4.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            </h6>
+            <h2 class="name">Avengers: Endgame</h2>
+            <h6 class="des">Movie (2019) <br />Action/Adventure/Drama</h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
         </div>
         <div class="card">
           <img src="images/poster 5.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            </h6>
+            <h2 class="name">Thor: Ragnarok</h2>
+            <h6 class="des">Movie (2017) <br />Action/Adventure/Comedy</h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
         </div>
         <div class="card">
           <img src="images/poster 6.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            </h6>
+            <h2 class="name">
+              The Avengers
+            </h2>
+            <h6 class="des">Movie (2012) <br />Action/Adventure/Sci-Fi</h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
         </div>
         <div class="card">
           <img src="images/poster 7.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            </h6>
+            <h2 class="name">
+              Pirates of the Caribbean: Dead Men Tell No Tales
+            </h2>
+            <h6 class="des">Movie (2017) <br />Action/Adventure/Fantasy</h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
         </div>
         <div class="card">
           <img src="images/poster 8.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            </h6>
+            <h2 class="name">Soul</h2>
+            <h6 class="des">Movie (2020) <br />Animation/Adventure/Comedy</h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
         </div>
         <div class="card">
           <img src="images/poster 9.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            </h6>
+            <h2 class="name">Raya and the Last Dragon</h2>
+            <h6 class="des">Movie (2021) <br />Animation/Action/Adventure</h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
         </div>
         <div class="card">
           <img src="images/poster 10.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            </h6>
+            <h2 class="name">Luca</h2>
+            <h6 class="des">Movie (2021) <br />Animation/Adventure/Comedy</h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
         </div>
         <div class="card">
           <img src="images/poster 11.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            </h6>
+            <h2 class="name">Ford v Ferrari</h2>
+            <h6 class="des">Movie (2019) <br />Action/Biograpgy/Drama</h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
         </div>
         <div class="card">
           <img src="images/poster 12.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            </h6>
+            <h2 class="name">Dark Phoenix</h2>
+            <h6 class="des">Movie (2019) <br />Action/Adventure/Sci-Fi</h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
         </div>
@@ -202,9 +186,8 @@
         <div class="card">
           <img src="images/poster 12.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            <h2 class="name">Dark Phoenix</h2>
+            <h6 class="des">Movie (2019) <br />Action/Adventure/Sci-Fi</h6>
             </h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
@@ -212,9 +195,8 @@
         <div class="card">
           <img src="images/poster 11.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            <h2 class="name">Ford v Ferrari</h2>
+            <h6 class="des">Movie (2019) <br />Action/Biograpgy/Drama
             </h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
@@ -222,9 +204,8 @@
         <div class="card">
           <img src="images/poster 10.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            <h2 class="name">Luca</h2>
+            <h6 class="des">Movie (2021) <br />Animation/Adventure/Comedy
             </h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
@@ -232,9 +213,8 @@
         <div class="card">
           <img src="images/poster 9.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            <h2 class="name">Raya and the Last Dragon</h2>
+            <h6 class="des">Movie (2021) <br />Animation/Action/Adventure
             </h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
@@ -242,9 +222,8 @@
         <div class="card">
           <img src="images/poster 8.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            <h2 class="name">Soul</h2>
+            <h6 class="des">Movie (2020) <br />Animation/Adventure/Comedy
             </h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
@@ -252,9 +231,9 @@
         <div class="card">
           <img src="images/poster 7.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            <h2 class="name">Pirates of the Caribbean: Dead Men Tell No Tales
+              </h2>
+              <h6 class="des">Movie (2017) <br />Action/Adventure/Fantasy
             </h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
@@ -262,9 +241,9 @@
         <div class="card">
           <img src="images/poster 6.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            <h2 class="name">The Avengers
+              </h2>
+              <h6 class="des">Movie (2012) <br />Action/Adventure/Sci-Fi
             </h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
@@ -272,9 +251,8 @@
         <div class="card">
           <img src="images/poster 5.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            <h2 class="name">Thor: Ragnarok</h2>
+            <h6 class="des">Movie (2017) <br />Action/Adventure/Comedy
             </h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
@@ -282,9 +260,8 @@
         <div class="card">
           <img src="images/poster 4.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            <h2 class="name">Avengers: Endgame</h2>
+            <h6 class="des">Movie (2019) <br />Action/Adventure/Drama
             </h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
@@ -292,9 +269,9 @@
         <div class="card">
           <img src="images/poster 3.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
+            <h2 class="name">The Falcon and the Winter Soldier</h2>
             <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              TV Mini Series (2021) <br />Action/Adventure/Drama
             </h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
@@ -302,9 +279,8 @@
         <div class="card">
           <img src="images/poster 2.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
-            <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            <h2 class="name">Mulan</h2>
+            <h6 class="des">Movie (2020) <br />Action/Adventure/Drama
             </h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
@@ -312,9 +288,9 @@
         <div class="card">
           <img src="images/poster 1.png" class="card-img" alt="" />
           <div class="card-body">
-            <h2 class="name">Movie Name</h2>
+            <h2 class="name">Loki</h2>
             <h6 class="des">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              TV Series (2021– ) <br />Action/Adventure/Fantasy
             </h6>
             <button class="watchlist-btn">add to watchlist</button>
           </div>
